feat: add helm value for consul resource-apis experiment (#2800)
* feat: add helm value for consul resource-apis experiment

* Apply suggestions from code review

Co-authored-by: John Murret <john.murret@hashicorp.com>

* PR feedback part 2

---------

Co-authored-by: John Murret <john.murret@hashicorp.com>

--- a/charts/consul/templates/server-statefulset.yaml
+++ b/charts/consul/templates/server-statefulset.yaml
@@ -417,6 +417,9 @@ spec:
                 {{- if and .Values.global.cloud.enabled .Values.global.cloud.resourceId.secretName }}
                 -hcl="cloud { resource_id = \"${HCP_RESOURCE_ID}\" }"
                 {{- end }}
+                {{- if (mustHas "resource-apis" .Values.global.experiments) }}
+                -hcl="experiments=[\"resource-apis\"]"
+                {{- end }}
           volumeMounts:
             - name: data-{{ .Release.Namespace | trunc 58 | trimSuffix "-" }}
               mountPath: /consul/data
