--- a/charts/consul/templates/partition-init-job.yaml
+++ b/charts/consul/templates/partition-init-job.yaml
@@ -114,6 +114,9 @@ spec:
                 {{- if .Values.global.cloud.enabled }}
                 -tls-server-name=server.{{ .Values.global.datacenter}}.{{ .Values.global.domain}} \
                 {{- end }}
+                {{- if (mustHas "resource-apis" .Values.global.experiments) }}
+                -enable-resource-apis=true
+                {{- end }}
           resources:
             requests:
               memory: "50Mi"
