--- a/charts/consul/values.yaml
+++ b/charts/consul/values.yaml
@@ -735,6 +735,24 @@ global:
   # @type: array<string>
   trustedCAs: [ ]
 
+  # Consul feature flags that will be enabled across components.
+  # Supported feature flags:
+  # * `resource-apis`:
+  #   _**Danger**_! This feature is under active development. It is not
+  #   recommended for production use. Setting this flag during an
+  #   upgrade could risk breaking your Consul cluster.
+  #   If this flag is set, Consul components will use the
+  #   V2 resources APIs for all operations.
+  #
+  # Example:
+  #
+  # ```yaml
+  # experiments: [ "resource-apis" ]
+  # ```
+  # @type: array<string>
+  experiments: [ ]
+
+
 # Server, when enabled, configures a server cluster to run. This should
 # be disabled if you plan on connecting to a Consul cluster external to
 # the Kube cluster.
