--- a/charts/consul/templates/crd-routeretryfilters.yaml
+++ b/charts/consul/templates/crd-routeretryfilters.yaml
@@ -4,7 +4,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.9.2
+    controller-gen.kubebuilder.io/version: v0.8.0
   creationTimestamp: null
   name: routeretryfilters.consul.hashicorp.com
   labels:
@@ -53,7 +53,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: RouteRetryFilterSpec defines the desired state of RouteRetryFilter
+            description: RouteRetryFilterSpec defines the desired state of RouteRetryFilter.
             properties:
               numRetries:
                 format: int32
@@ -114,4 +114,10 @@ spec:
     storage: true
     subresources:
       status: {}
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 {{- end }}
