--- a/charts/consul/templates/crd-routetimeoutfilters.yaml
+++ b/charts/consul/templates/crd-routetimeoutfilters.yaml
@@ -4,7 +4,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.9.2
+    controller-gen.kubebuilder.io/version: v0.8.0
   creationTimestamp: null
   name: routetimeoutfilters.consul.hashicorp.com
   labels:
@@ -54,7 +54,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: RouteTimeoutFilterSpec defines the desired state of RouteTimeoutFilter
+            description: RouteTimeoutFilterSpec defines the desired state of RouteTimeoutFilter.
             properties:
               idleTimeout:
                 description: A Duration represents the elapsed time between two instants
@@ -112,4 +112,10 @@ spec:
     storage: true
     subresources:
       status: {}
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 {{- end }}
