--- a/control-plane/config/crd/bases/consul.hashicorp.com_routetimeoutfilters.yaml
+++ b/control-plane/config/crd/bases/consul.hashicorp.com_routetimeoutfilters.yaml
@@ -6,7 +6,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.9.2
+    controller-gen.kubebuilder.io/version: v0.8.0
   creationTimestamp: null
   name: routetimeoutfilters.consul.hashicorp.com
 spec:
@@ -50,7 +50,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: RouteTimeoutFilterSpec defines the desired state of RouteTimeoutFilter
+            description: RouteTimeoutFilterSpec defines the desired state of RouteTimeoutFilter.
             properties:
               idleTimeout:
                 description: A Duration represents the elapsed time between two instants
@@ -108,3 +108,9 @@ spec:
     storage: true
     subresources:
       status: {}
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
