docs - Update connectInject.logLevel docs (#2871)
* Update values.yaml

Co-authored-by: Jeff Boruszak <104028618+boruszak@users.noreply.github.com>

--- a/charts/consul/values.yaml
+++ b/charts/consul/values.yaml
@@ -2440,7 +2440,7 @@ connectInject:
   # @type: string
   imageConsul: null
 
-  # Override global log verbosity level. One of "debug", "info", "warn", or "error".
+  # Sets the `logLevel` for the `consul-dataplane` sidecar and the `consul-connect-inject-init` container. When set, this value overrides the global log verbosity level. One of "debug", "info", "warn", or "error".
   # @type: string
   logLevel: ""
 
