removed deprecated `patchesStrategicMerge` (#2894)
* removed deprecated `patchesStrategicMerge`

* fixed some extra whitespace

--- a/acceptance/tests/fixtures/cases/jobs/job-client-inject/kustomization.yaml
+++ b/acceptance/tests/fixtures/cases/jobs/job-client-inject/kustomization.yaml
@@ -2,7 +2,9 @@
 # SPDX-License-Identifier: MPL-2.0
 
 resources:
-  - ../../../bases/job-client
+- ../../../bases/job-client
 
-patchesStrategicMerge:
-  - patch.yaml
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+patches:
+- path: patch.yaml
