--- a/acceptance/tests/fixtures/cases/wan-federation/static-client/kustomization.yaml
+++ b/acceptance/tests/fixtures/cases/wan-federation/static-client/kustomization.yaml
@@ -2,7 +2,9 @@
 # SPDX-License-Identifier: MPL-2.0
 
 resources:
-  - ../../../bases/static-client
+- ../../../bases/static-client
 
-patchesStrategicMerge:
-  - patch.yaml
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+patches:
+- path: patch.yaml
