--- a/charts/consul/templates/crd-servicedefaults.yaml
+++ b/charts/consul/templates/crd-servicedefaults.yaml
@@ -192,6 +192,69 @@ spec:
                   unlock usage of the service-splitter and service-router config entries
                   for a service.
                 type: string
+              rateLimits:
+                description: RateLimits is rate limiting configuration that is applied
+                  to inbound traffic for a service. Rate limiting is a Consul enterprise
+                  feature.
+                properties:
+                  instanceLevel:
+                    description: InstanceLevel represents rate limit configuration
+                      that is applied per service instance.
+                    properties:
+                      requestsMaxBurst:
+                        description: "RequestsMaxBurst is the maximum number of requests
+                          that can be sent in a burst. Should be equal to or greater
+                          than RequestsPerSecond. If unset, defaults to RequestsPerSecond.
+                          \n Internally, this is the maximum size of the token bucket
+                          used for rate limiting."
+                        type: integer
+                      requestsPerSecond:
+                        description: "RequestsPerSecond is the average number of requests
+                          per second that can be made without being throttled. This
+                          field is required if RequestsMaxBurst is set. The allowed
+                          number of requests may exceed RequestsPerSecond up to the
+                          value specified in RequestsMaxBurst. \n Internally, this
+                          is the refill rate of the token bucket used for rate limiting."
+                        type: integer
+                      routes:
+                        description: Routes is a list of rate limits applied to specific
+                          routes. For a given request, the first matching route will
+                          be applied, if any. Overrides any top-level configuration.
+                        items:
+                          properties:
+                            pathExact:
+                              description: Exact path to match. Exactly one of PathExact,
+                                PathPrefix, or PathRegex must be specified.
+                              type: string
+                            pathPrefix:
+                              description: Prefix to match. Exactly one of PathExact,
+                                PathPrefix, or PathRegex must be specified.
+                              type: string
+                            pathRegex:
+                              description: Regex to match. Exactly one of PathExact,
+                                PathPrefix, or PathRegex must be specified.
+                              type: string
+                            requestsMaxBurst:
+                              description: RequestsMaxBurst is the maximum number
+                                of requests that can be sent in a burst. Should be
+                                equal to or greater than RequestsPerSecond. If unset,
+                                defaults to RequestsPerSecond. Internally, this is
+                                the maximum size of the token bucket used for rate
+                                limiting.
+                              type: integer
+                            requestsPerSecond:
+                              description: RequestsPerSecond is the average number
+                                of requests per second that can be made without being
+                                throttled. This field is required if RequestsMaxBurst
+                                is set. The allowed number of requests may exceed
+                                RequestsPerSecond up to the value specified in RequestsMaxBurst.
+                                Internally, this is the refill rate of the token bucket
+                                used for rate limiting.
+                              type: integer
+                          type: object
+                        type: array
+                    type: object
+                type: object
               transparentProxy:
                 description: 'TransparentProxy controls configuration specific to
                   proxies in transparent mode. Note: This cannot be set using the
