Address issue #1285 via docs (#2903)
* Update values.yaml
Co-authored-by: Tu Nguyen <im2nguyen@users.noreply.github.com>

--- a/charts/consul/values.yaml
+++ b/charts/consul/values.yaml
@@ -3072,8 +3072,9 @@ ingressGateways:
 
   # Gateways is a list of gateway objects. The only required field for
   # each is `name`, though they can also contain any of the fields in
-  # `defaults`. Values defined here override the defaults except in the
-  # case of annotations where both will be applied.
+  # `defaults`. You must provide a unique name for each ingress gateway. These names 
+  # must be unique across different namespaces. 
+  # Values defined here override the defaults, except in the case of annotations where both will be applied.
   # @type: array<map>
   gateways:
     - name: ingress-gateway
