--- a/control-plane/config/webhook/manifests.yaml
+++ b/control-plane/config/webhook/manifests.yaml
@@ -323,3 +323,31 @@ webhooks:
     resources:
     - terminatinggateways
   sideEffects: None
+---
+apiVersion: admissionregistration.k8s.io/v1
+kind: ValidatingWebhookConfiguration
+metadata:
+  creationTimestamp: null
+  name: validating-webhook-configuration
+webhooks:
+- admissionReviewVersions:
+  - v1beta1
+  - v1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
+      path: /validate-v1alpha1-gatewaypolicy
+  failurePolicy: Fail
+  name: validate-gatewaypolicy.consul.hashicorp.com
+  rules:
+  - apiGroups:
+    - consul.hashicorp.com
+    apiVersions:
+    - v1alpha1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - gatewaypolicies
+  sideEffects: None
