Rename pbmesh.Upstreams to pbmesh.Destinations (#3005)
* Rename pbmesh.Upstreams to pbmesh.Destinations

* fix traffic perm acceptance tests fixture

* more mesh v2 acceptance test fixes

* kick off k8s tests

* update images

--- a/acceptance/tests/fixtures/bases/trafficpermissions/trafficpermissions.yaml
+++ b/acceptance/tests/fixtures/bases/trafficpermissions/trafficpermissions.yaml
@@ -9,5 +9,6 @@ spec:
   destination:
     identityName: multiport
   action: allow
-  sources:
-    - identityName: static-client
+  permissions:
+    - sources:
+        - identityName: static-client
