Fix typo in ControlPlaneRequestLimits CRD for preparedQuery (#3001)
This commit fixes typo in ControlPlaneRequestLimits CRD where the
`preparedQuery` rate limit config was exposed as `perparedQuery`.

--- a/charts/consul/templates/crd-controlplanerequestlimits.yaml
+++ b/charts/consul/templates/crd-controlplanerequestlimits.yaml
@@ -118,7 +118,7 @@ spec:
                 type: object
               mode:
                 type: string
-              perparedQuery:
+              preparedQuery:
                 properties:
                   readRate:
                     type: number
