--- a/control-plane/config/crd/bases/consul.hashicorp.com_controlplanerequestlimits.yaml
+++ b/control-plane/config/crd/bases/consul.hashicorp.com_controlplanerequestlimits.yaml
@@ -114,7 +114,7 @@ spec:
                 type: object
               mode:
                 type: string
-              perparedQuery:
+              preparedQuery:
                 properties:
                   readRate:
                     type: number
