--- a/.github/workflows/nightly-acceptance-1-3-0.yml
+++ b/.github/workflows/nightly-acceptance-1-3-0.yml
@@ -1,5 +1,5 @@
 # Dispatch to the consul-k8s-workflows with a nightly cron
-name: nightly-acceptance
+name: nightly-acceptance-1-3-0
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
@@ -8,7 +8,7 @@ on:
 
 # these should be the only settings that you will ever need to change
 env:
-  BRANCH: "release/1.3.0-rc1"
+  BRANCH: "release/1.3.0"
   CONTEXT: "nightly"
 
 jobs:
