--- a/.github/workflows/weekly-acceptance-1-3-x.yml
+++ b/.github/workflows/weekly-acceptance-1-3-x.yml
@@ -1,16 +1,18 @@
 # Dispatch to the consul-k8s-workflows with a weekly cron
 #
 # A separate file is needed for each release because the cron schedules are different for each release.
-name: weekly-acceptance-0-49-x
+name: weekly-acceptance-1-3-x
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    # Run weekly on Monday at 3AM UTC/11PM EST/8PM PST
-    - cron:  '0 3 * * 1'
+    # Run weekly on Wednesday at 3AM UTC/11PM EST/8PM PST
+   # - cron:  '0 3 * * 3'
+    - cron:  '0 0 * * *' # Temporarily nightly until 1.2.0 GA
+
 
 # these should be the only settings that you will ever need to change
 env:
-  BRANCH: "release/0.49.x"
+  BRANCH: "release/1.3.x"
   CONTEXT: "weekly"
 
 jobs:
