NET-6401 Stub MeshGateway controller (#3204)
* NET-6401 Stub MeshGateway controller

* Add MeshGateways resource to connect-inject-clusterrole

* Setup v2controller for MeshGateway

* Add bats test assertion for connect-inject-clusterrole

* Regenerate control-plane/config/rbac/role.yaml

--- a/charts/consul/templates/connect-inject-clusterrole.yaml
+++ b/charts/consul/templates/connect-inject-clusterrole.yaml
@@ -98,6 +98,7 @@ rules:
   resources:
     - grpcroutes
     - httproutes
+    - meshgateways
     - tcproutes
     - proxyconfigurations
   verbs:
@@ -113,6 +114,7 @@ rules:
   resources:
     - grpcroutes/status
     - httproutes/status
+    - meshgateways/status
     - tcproutes/status
     - proxyconfigurations/status
   verbs:
